feat: 实现我的todo list

--- a/style.css
+++ b/style.css
@@ -6,3 +6,11 @@
   color: white;
   background-color: blue;
 }
+
+.mr-10 {
+  margin-right: 10px;
+}
+
+.done-state {
+  text-decoration: line-through;
+}
